--- a/MemberRegistration.ConsoleUI/MemberRegistration.ConsoleUI.csproj
+++ b/MemberRegistration.ConsoleUI/MemberRegistration.ConsoleUI.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MemberRegistration.Businnes\MemberRegistration.Businnes.csproj" />
+  </ItemGroup>
+
 </Project>
