--- a/DevFramework.Core/packages.config
+++ b/DevFramework.Core/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NHibernate" version="5.3.13" targetFramework="net472" />
+  <package id="Ninject" version="3.3.2" targetFramework="net472" />
   <package id="PostSharp" version="4.2.17" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net472" />
