--- a/MemberRegistration.MvcWebUI/Web.config
+++ b/MemberRegistration.MvcWebUI/Web.config
@@ -8,6 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<connectionStrings>
+		<add name="MembershipContext"
+    connectionString="data source=(localdb)\MSSQLLocalDB; initial catalog=MemberDB;&#xD;&#xA;			 integrated security=true"
+                              providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -50,4 +55,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="KPSPublicSoap">
+					<security mode="Transport" />
+				</binding>
+				<binding name="KPSPublicSoap1" />
+			</basicHttpBinding>
+		</bindings>
+		<client>
+			<endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublic.asmx" binding="basicHttpBinding" bindingConfiguration="KPSPublicSoap" contract="KPSServiceReference.KPSPublicSoap" name="KPSPublicSoap" />
+		</client>
+	</system.serviceModel>
 </configuration>
