--- a/MemberRegistration.MvcWebUI/MemberRegistration.MvcWebUI.csproj
+++ b/MemberRegistration.MvcWebUI/MemberRegistration.MvcWebUI.csproj
@@ -142,6 +142,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Controllers\MemberController.cs" />
+    <Compile Include="Filters\ExceptionHandlerAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
